--- a/enyo/src/main/css/enyo.css
+++ b/enyo/src/main/css/enyo.css
@@ -246,8 +246,8 @@ body .enyo-fit {
 	 	background-color: #E1E1E1;
 	*/
 	/**/
-	background: #E1E1E1 url(../lib/onyx/images/gradient.png) repeat-x bottom;
-	background-size: contain;
+	/*background: #E1E1E1 url(../lib/onyx/images/gradient.png) repeat-x bottom;
+	background-size: contain;*/
 	/**/
 	text-overflow: ellipsis;
 	/* the following cause arcane problems on IE */
@@ -264,14 +264,14 @@ body .enyo-fit {
 	the effect is as if .onyx-button.active doesn't exist
 */
 .onyx-button.active {
-	background-image: url(../lib/onyx/images/gradient-invert.png);
+	/*background-image: url(../lib/onyx/images/gradient-invert.png);*/
 	background-position: top;
 	border-top: 1px solid rgba(15, 15, 15, 0.6);
 	box-shadow: inset 0px 1px 0px rgba(0,0,0,0.1);
 }
 
 .onyx-button:active:hover:not([disabled]) {
-	background-image: url(../lib/onyx/images/gradient-invert.png);
+	/*background-image: url(../lib/onyx/images/gradient-invert.png);*/
 	background-position: top;
 	border-top: 1px solid rgba(15, 15, 15, 0.6);
 	box-shadow: inset 0px 1px 0px rgba(0,0,0,0.1);
@@ -290,7 +290,7 @@ body .enyo-fit {
 	cursor: pointer;
 	height: 32px;
 	width: 32px;
-	background: url(../lib/onyx/images/checkbox.png) no-repeat; 
+	/*background: url(../lib/onyx/images/checkbox.png) no-repeat; */
 	/* reset for ? */
 	margin: 0px;
 	/* these entries cause toggle-button and checkbox to line up properly*/
@@ -308,7 +308,7 @@ body .enyo-fit {
 
 /* Grabber.css */
 .onyx-grabber {
-	background: url(../lib/onyx/images/grabbutton.png) no-repeat center;
+	/*background: url(../lib/onyx/images/grabbutton.png) no-repeat center;*/
 	width: 23px;
 	height: 27px;
 }
@@ -321,7 +321,7 @@ body .enyo-fit {
 	border-radius: 8px;
 	padding: 6px;
 	color: white;
-	background: #4C4C4C url(../lib/onyx/images/gradient.png) repeat-x 0 bottom;
+	/*background: #4C4C4C url(../lib/onyx/images/gradient.png) repeat-x 0 bottom;*/
 }
 
 .onyx-popup-decorator {
@@ -369,7 +369,7 @@ body .enyo-fit {
 	/**/
 	background-color: #343434;
 	border: none;
-	background: #4c4c4c url(../lib/onyx/images/gradient.png) repeat-x 0 10px;
+	/*background: #4c4c4c url(../lib/onyx/images/gradient.png) repeat-x 0 10px;*/
 }
 
 .onyx-groupbox .onyx-input-decorator {
@@ -605,7 +605,7 @@ body .enyo-fit {
 	text-shadow: 0 1px 1px rgba(0,0,0,0.2);
 	text-align: center;
 	/**/
-	background: #E7E7E7 url(../lib/onyx/images/gradient.png) repeat-x bottom;
+	/*background: #E7E7E7 url(../lib/onyx/images/gradient.png) repeat-x bottom;*/
 	/* IE8 */
 	border: 1px solid #333;
 	border: 1px solid rgba(15, 15, 15, 0.2);
@@ -627,7 +627,7 @@ body .enyo-fit {
 
 .onyx-radiobutton.active {
 	color: White;
-	background: #0091F2 url(../lib/onyx/images/gradient-invert.png) repeat-x top;
+	/*background: #0091F2 url(../lib/onyx/images/gradient-invert.png) repeat-x top;*/
 	border-top: 1px solid rgba(15, 15, 15, 0.6);
 	box-shadow: inset 1px 2px 2px rgba(0, 0, 0, 0.2);
 }
@@ -673,7 +673,7 @@ body .enyo-fit {
 	/* */
 	border-radius: 3px;
 	box-shadow: inset 0px 1px 3px rgba(0,0,0,0.4);
-	background: #8BBA3D url(../lib/onyx/images/gradient-invert.png) repeat-x bottom;
+	/*background: #8BBA3D url(../lib/onyx/images/gradient-invert.png) repeat-x bottom;*/
 	background-size: auto 100%;
 	/* label */
 	color: white;
@@ -692,7 +692,7 @@ body .enyo-fit {
 	height: 30px;
 	margin: 1px;
 	border-radius: 3px;
-	background: #F6F6F6 url(../lib/onyx/images/gradient.png) repeat-x;
+	/*background: #F6F6F6 url(../lib/onyx/images/gradient.png) repeat-x;*/
 	background-size: auto 100%;
 }
 
@@ -739,7 +739,7 @@ body .enyo-fit {
 	padding: 9px 8px 10px 8px;
 	/**/
 	border: 1px solid #3A3A3A;
-	background: #4C4C4C url(../lib/onyx/images/gradient.png) repeat-x 0 bottom;
+	/*background: #4C4C4C url(../lib/onyx/images/gradient.png) repeat-x 0 bottom;*/
 	color: white;
 	/**/
 	white-space: nowrap;
@@ -801,7 +801,7 @@ body .enyo-fit {
 	box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
 	border: 1px solid rgba(0,0,0,0.2);
 	color: white;
-	background: #216593 url(../lib/onyx/images/gradient.png) repeat-x 0 bottom;
+	/*background: #216593 url(../lib/onyx/images/gradient.png) repeat-x 0 bottom;*/
 	border-radius: 3px;
 	white-space: nowrap;
 }
@@ -868,14 +868,14 @@ body .enyo-fit {
 	height: 8px;
 	border: 1px solid rgba(15, 15, 15, 0.2);
 	border-radius: 3px;
-	background: #B8B8B8 url(../lib/onyx/images/gradient-invert.png) repeat-x;
+	/*background: #B8B8B8 url(../lib/onyx/images/gradient-invert.png) repeat-x;*/
 	background-size: auto 100%;
 }
 
 .onyx-progress-bar-bar {
 	height: 100%;
 	border-radius: 3px;
-	background: #58ABEF url(../lib/onyx/images/gradient.png) repeat-x;
+	/*background: #58ABEF url(../lib/onyx/images/gradient.png) repeat-x;*/
 	background-size: auto 100%;
 }
 
@@ -983,7 +983,7 @@ body .enyo-fit {
 	position: relative;
 	height: 40px;
 	width: 40px;
-	background: url(../lib/onyx/images/slider-handle.png) left top no-repeat;
+	/*background: url(../lib/onyx/images/slider-handle.png) left top no-repeat;*/
 	margin: -23px -20px;
 }
 
@@ -1021,11 +1021,11 @@ body .enyo-fit {
 	width: 58px;
 	height: 59px;
 	display: inline-block;
-	background: url(../lib/onyx/images/spinner-dark.gif) no-repeat 0 0;
+	/*background: url(../lib/onyx/images/spinner-dark.gif) no-repeat 0 0;*/
 }
 
 .onyx-spinner.onyx-light {
-	background: url(../lib/onyx/images/spinner-light.gif) no-repeat 0 0;
+	/*background: url(../lib/onyx/images/spinner-light.gif) no-repeat 0 0;*/
 }
 
 /* MoreToolbar.css */
@@ -1054,7 +1054,7 @@ body .enyo-fit {
 }
 
 .onyx-more-button {
-	background-image: url(../lib/onyx/images/more.png);
+	/*background-image: url(../lib/onyx/images/more.png);*/
 	margin: 4px 6px 5px;
 }
 
